--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "copy-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
     "d3": "^4.10.0"
