--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1",
-    "copy-webpack-plugin": "^4.0.1"
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "d3": "^4.10.0"
+    "d3": "^5"
   }
 }
